--- a/__tests__/showcase.html
+++ b/__tests__/showcase.html
@@ -8,7 +8,7 @@
   <body>
     <h1>CHECK CONSOLE</h1>
 
-    <script src="../dist/loog.js" charset="utf-8"></script>
+    <script src="../dist/loog.min.js" charset="utf-8"></script>
     <script type="text/javascript">
       console.log(Loog)
       const logger = Loog.default.get('Showcase')
