WP build: Correct default export for the web build

--- a/__tests__/showcase.html
+++ b/__tests__/showcase.html
@@ -10,8 +10,7 @@
 
     <script src="../dist/loog.min.js" charset="utf-8"></script>
     <script type="text/javascript">
-      console.log(Loog)
-      const logger = Loog.default.get('Showcase')
+      const logger = Loog.get('Showcase')
 
       logger.debug('debug')
       logger.log('log')
