New style with icons / badges for browser

--- a/__tests__/showcase.html
+++ b/__tests__/showcase.html
@@ -10,6 +10,12 @@
 
     <script src="../dist/loog.js" charset="utf-8"></script>
     <script type="text/javascript">
+      Loog.debug('default debug')
+      Loog.log('default log')
+      Loog.info('default info')
+      Loog.warn('default warn')
+      Loog.error('default error')
+
       const logger = Loog.get('Showcase')
 
       logger.debug('debug')
